mlflow_deployment/prod/generated/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service-prod
  namespace: smart-dc-prod
  labels:
    app: mlflow
    environment: prod
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: mlflow
    environment: prod
